--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab2_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab2_Layout.cshtml
@@ -11,10 +11,14 @@
     .CheckListClass
     {
         width:100%;
+        font-size:0.8em;
     }
 
     .CheckListClass table tr td{
         text-align:left;
+    }
+    .checkListClass input {
+        height: 1.5vh;
     }
 </style>
 
