--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/FinalInspection_Picture.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/FinalInspection_Picture.cshtml
@@ -16,3 +16,12 @@
 
     idx++;
 }
+
+
+<script>
+    if ('@Model.Count' == 0) {
+        alert("No data found.");
+        window.close();
+    }
+
+</script>
