--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/General.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/General.cshtml
@@ -106,7 +106,7 @@
                 });
 
                 if (selected.length < 4) {
-                    msg.WithError('These items must be selected before go to next step.!');
+                    msg.WithError('These items must be selected before go to next step.');
                     return false;
                 }
 
